--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     "eslint": "8.10.0",
     "eslint-config-prettier": "8.4.0",
     "eslint-plugin-jasmine": "4.1.3",
-    "galenframework-cli": "2.4.4",
+    "galenframework-cli": "2.4.4-build43",
     "husky": "7.0.4",
     "jasmine-core": "4.0.1",
-    "karma": "6.3.4",
+    "karma": "6.3.20",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.1.1",
     "karma-jasmine": "4.0.1",
